<resources>
    <string name="app_name">Action Bar</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_location_found">Location</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_help">Help</string>
    <string name="action_check_updates">Check Updates</string>
    <string name="title_activity_activity_location_found">Location</string>
</resources>
